# testpilot-ai

./: .gitignore  ARCHITECTURE.txt  INSTALL.txt  INTEGRATION_GUIDE.md  README.md  config.example.yaml  conftest.py  package.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: testpilot.yml
scripts/: playwright_chain.js  playwright_runner.js
testpilot/: __init__.py  __main__.py  chain_analyzer.py  chain_generator.py  config.py  diff_detector.py  generator.py  init.py  interceptor.py  pytest_plugin.py  targeted_runner.py
testpilot/adapters/: siebel_rest.py  siebel_soap.py  solr.py
testpilot/reporters/: telegram.py
testpilot/runners/: pytest_runner.py  solr_runner.py
tests/examples/: test_apply_chain.py  test_how_to_use.py  test_python_api.py  test_search_chain.py  test_siebel_contracts.py  test_solr_validation.py
vscode-extension/: BUILD.txt  LICENSE  package-lock.json  package.json  testpilot-ai-0.1.0.vsix
vscode-extension/src/: extension.js
